# amoeba-accounting

./: .gitignore  CLAUDE.md  components.d.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts  用户手册.md  阿米巴单位时间核算表_设计文档.md
.gitee/scripts/: build.sh  release.sh
.github/workflows/: release.yml
.workflow/: release.yml
src/: main.ts
src-tauri/: Cargo.lock.bak  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: amoeba_cmd.rs  category_cmd.rs  export_cmd.rs  mod.rs  record_cmd.rs
src-tauri/src/export/: mod.rs  styles.rs  xlsx_writer.rs
src-tauri/src/models/: accounting_record.rs  amoeba.rs  amoeba_category.rs  expense_detail.rs  income_detail.rs  labor_time.rs  mod.rs
src-tauri/src/repository/: amoeba_repo.rs  category_repo.rs  db.rs  expense_repo.rs  income_repo.rs  labor_repo.rs  mod.rs  record_repo.rs
src-tauri/src/services/: aggregator.rs  calculator.rs  mod.rs  validator.rs
src-tauri/tests/: api_tests.rs
src/components/: AccountingTable.vue  AppLayout.vue  ExpenseEditor.vue  IncomeEditor.vue  LaborTimeEditor.vue  ResultPreview.vue
src/composables/: useAccounting.ts  useTauri.ts  useTauriAvailable.ts
src/router/: index.ts
src/stores/: amoeba.ts  category.ts  record.ts
src/styles/: index.scss
src/types/: accounting.ts  amoeba.ts  category.ts  record.ts
src/utils/: constants.ts  format.ts
src/views/: AmoebaManager.vue  Dashboard.vue  DataEntry.vue  ExportPage.vue  (+3 more)
(+5 files in other folders)
